putting sectioncard again

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DECO_SITE_NAME=healthcheck-api
+DECO_SITE_NAME=healthcheck-api 
+DECO_ENV_NAME=nathan
+HYPERDX_APIKEY=a471b49f-933d-4a77-ace8-cc47c703c25b
